# ds_project_arch_lab

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_eda.ipynb  05_feature_manipulation.ipynb  DS Project Archiecture Lab.ipynb
src/ds_project_arch_lab/: __init__.py
src/ds_project_arch_lab/cli/: prepare_data.py
src/ds_project_arch_lab/features/: build_features.py
src/ds_project_arch_lab/utils/: preprocessing.py
