[project]
name = "ds-project-arch-lab"
version = "0.1.0"
description = "End-to-end data science project lab (Poetry + src layout)"
authors = [
    {name = "DanDan93SB", email = "yordanbah9376@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "mlflow (>=3.3.1,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "ds_project_arch_lab", from = "src" }
]

[tool.poetry.scripts]
prepare-data = "ds_project_arch_lab.cli.prepare_data:main"